# duckdb

tools/shell/: CMakeLists.txt  shell.c
